stylesheets/widgets/product-carousel-listing.less
#product-carousel {
  display: flex;
  justify-content: center;
  max-width: 1140px;
  margin-right: auto;
  margin-left: auto;
}

#product-carousel-slider {
  padding-bottom: 5px;
  overflow: hidden;

  .swiper-wrapper {

    .swiper-slide {
      height: auto;
    }

  }
  &.no-swiper {
    overflow: auto; 
    width: 100%;
    display: flex;
    justify-content: center;

    .swiper-wrapper {
      display: flex;
      justify-content: center;

      .product-item {
        max-width: 150px;
        margin: 7px;
      }
    }
  }


  .mz-productlisting {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    // justify-content: safe;
    align-items: center;
    width: 100%;
    height: 100%;
    padding-top: 12px;
    border: 1px solid @lightBorder;
    border-radius: 16px;

    & > div {
      padding: 0 12px;
    }

    .product-image-swatch-wrapper {
      width: 100%;
    }

    &-image {
      position: relative;
      width: 100%;

      &::before {
        content: "";
        display: block;
        width: 100%;
        padding-top: 100%;
      }
      a {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
      }

      img {
        width: 100%;
      }
    }

    &-imageplaceholder {
      display: flex;
      justify-content: center;
      align-items: center;
      height: 100%;
    }


    &-info {
      height: 100%;
      padding: 10px 12px 15px 12px!important;


      .mz-productlisting-title {
        font-size: 14px;
        line-height: 14px;
        color: @bestSellersColor;
      }

      .mz-productlisting-productcode {
        font-size: 14px;
        line-height: 14px;
        color: @bestSellersColor;
      }
    }

    .ml-product-price-wrapper {
      width: 100%;
      max-height: 45px;
      padding: 12px;
      border: none;
      border-bottom-left-radius: 15px;
      border-bottom-right-radius: 15px;
      background-color: @ghostWhite;
      text-align: center;
      white-space: nowrap;

      .is-not-ranged.mz-price.is-crossedout {
        display: none;
      }

      .mz-price {
        color: @textColor;
        font-size: 18px;
        line-height: initial;
      }
      .mz-price.is-crossedout {
        font-size: 14px;
      }
      .mz-price.is-saleprice {
        color: @primaryColor;
      }
    }
  }
}
.product-carousel-listing {
    padding: 0 90px 60px;

    @media @tablet-only {
      padding: 0 70px 60px;
    }
    @media @mobile {
      padding: 0 55px 50px;
    }

    .swiper-container{
        height: 100%;
        .product-item {
            padding: 0 0 4rem;
            .product-listing-container{
                float: none;
                margin: 0 auto;
                position: relative;
                border: none;
                }
            }
        }
    }
    .swiper-button-next, .swiper-button-prev,
    .swiper-btn-next, .swiper-btn-prev{
        position: absolute;
        z-index: 2;
        cursor: pointer;
        width: auto;
        height: auto;

        background-image: none!important;
        font-size: 35px;
        color: @navBorder;
        &:focus{
            outline: none;
        }

    }
    .swiper-button-next,
    .swiper-btn-next{
      .usas-icon-chevron-left();
        right: 61px!important;
        left: auto!important;
        top: ~"calc(50% - 22px)"!important;
        width: auto!important;

        @media @tablet-only {
          right: 36px!important;
        }
        @media @mobile {
          right: 25px!important;
        }
    }
    .swiper-button-prev,
    .swiper-btn-prev{
      .usas-icon-chevron-right();
        left: 61px!important;
        right: auto!important;
        top: ~"calc(50% - 22px)"!important;
        width: auto!important;

        @media @tablet-only {
          left: 36px!important;
        }
        @media @mobile {
            left: 25px!important;
          }
    }

.bx-wrapper{
    .mz-pagesubtitle{
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

